GridView should re-layout if add/remove before visible index

Unlike ListView, GridView must redo its layout if an item is added or
removed from before the visible items, since it affects the column/row
layout.

Task-number: QTBUG-21588
Change-Id: Id333bc653033751c45d127973e94fae4580c55b0
Reviewed-by: Bea Lam <bea.lam@nokia.com>